$Id: CHANGES,v 1.237 2004/01/27 10:15:36 stelian Exp $

Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
=======================================================================

1.	Fixed dump compilation with old gcc versions. Thanks to
	Mike Castle <dalgoda@users.sourceforge.net> for the patch.

2.	Fixed some warnings (howmany, roundup, powerof2 redefined)
	when compiling against a recent glibc version.

Changes between versions 0.4b34 and 0.4b35 (released December 21, 2003)
=======================================================================

1.	Added a note in the dump man page saying that the default
	blocksize can be 32 if -d is used with a high density argument.
	Thanks to Antonios Christofides <A.Christofides@itia.ntua.gr>
	for the patch.

2.	Fixed configure to correctly understand CPPFLAGS, CFLAGS,
	LDFLAGS environment variables. Thanks to Arcady Genkin
	<antipode@users.sourceforge.net> for reporting the bug.

3.	Made -e/-E options of dump accept an unlimited number of inodes
	to be excluded, rather than a hardcoded maximum. Thanks to 
	Dietrich Rothe <d-rothe@users.sourceforge.net> for the patch.

4.	Updated the autoconf system to 2.50. Forced the -D_BSD_SOURCE
	and -D_USE_BSD_SIGNAL defines in configure in order to solve
	64bit build problems because quad_t is redifined with a 
	different signature. Thanks to Mike Harris <mharris@redhat.com>
	for reporting this bug.

5.	Made restore build on Solaris, making possible to
	restore Linux's "enhanced" tapes. Thanks to Uwe Gohlke
	<uwe@ugsoft.de> for the patch.

6.	Made an extension in the dump tape format capable of saving
	MacOSX specific inode extensions. Uwe Gohlke <uwe@ugsoft.de>
	wrote the extension and contributed the restore code back
	into this codebase. The same extension mechanism will be
	used in the future to save ACLs...

7.	Made rmt work correctly with regard to QFA and local/remote
	files and tapes. The remote access will however work only 