@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.237 2004/01/27 10:15:36 stelian Exp $
+$Id: CHANGES,v 1.238 2004/01/27 10:18:17 stelian Exp $
 
 Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 =======================================================================
@@ -8,6 +8,11 @@ Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 
 2.	Fixed some warnings (howmany, roundup, powerof2 redefined)
 	when compiling against a recent glibc version.
+
+3.	Fixed a bug in restore preventing the read of a dump tape
+	written with Solaris 7 ufsdump. Thanks to Patrick Higgins
+	<phiggins@transzap.com> for reporting the bug and providing 
+	the test case.
 
 Changes between versions 0.4b34 and 0.4b35 (released December 21, 2003)
 =======================================================================
